# 2012-3-28

- Fixed crash when you try to change security questions and they don't already exist
- Security questions 'Done' button is only enabled when the questions and answers exist

# 2012-3-26

- Fixed usability issues with PIN code and security questions
- Last thing remaining is the PIN code reset

# 2012-3-23

- Security questions to assist in passcode reset
- Rewritten passcode view to support security question workflow
- There are some minor usability issues with this release but nothing that will keep the app from running properly

# 2012-3-6

- Minor refactoring of vital views
- Import new patient JSON files
- Show medications sorted with most recent on top

# 2012-02-29

- Fixed medications to be formatted properly (will show max of 8)
- Refactored vitals
- Sparklines are now generated from real data
- BMI implemented with normal check and ranges

# 2012-02-27

- Doctors view now setup to dynamically load providers
- Converted doctors view to storyboard view controller
- Ensure child view title is set on root view for when pushing onto the nav stack
- Code cleanup and refactoring

# 2012-02-23

- Added new swipe view to summary view
- Started using PDS variables for summary view

# 2012-02-17

- Refactor C32 browser to use storyboarding
- C32 now displays data based on the selected patient

# 2012-02-16

- Rewrite root view controller to eliminate a lot of memory and lifecycle issues

# 2012-02-15

- Refactored swipe control
- Updated swipe control on doctors, messages, timeline
- Timeline now dynamically loads greenJSON data

# 2012-02-08

- Refactored vitals into their own view class
- Vitals are now specific to the metric they are measuring and can determine if the results are in range
- Set version number to 0.2

# 2012-02-06

- Disable any kind of feedback on the PIN entry screen
- Set messages table view to gray gradient selection style
- Implement mechanism to set/change passcode

# 2012-02-02
